tests/baselines/reference/circularImportAlias.errors.txt
tests/cases/conformance/internalModules/importDeclarations/circularImportAlias.ts(5,30): error TS2449: Class 'C' used before its declaration.


==== tests/cases/conformance/internalModules/importDeclarations/circularImportAlias.ts (1 errors) ====
    // expected no error
    
    module B {
        export import a = A;
        export class D extends a.C {
                                 ~
!!! error TS2449: Class 'C' used before its declaration.
!!! related TS2728 tests/cases/conformance/internalModules/importDeclarations/circularImportAlias.ts:11:18: 'C' is declared here.
            id: number;
        }
    }
    
    module A {
        export class C { name: string }
        export import b = B;
    }
    
    var c: { name: string };
    var c = new B.a.C();
    
    
    